--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            bundles: appimage
+          - os: windows-latest
+            bundles: msi,nsis
+          - os: macos-latest
+            bundles: dmg
 
     runs-on: ${{ matrix.os }}
 
@@ -54,4 +60,4 @@ jobs:
           releaseDraft: false
           prerelease: false
           args: >-
-            --bundles appimage,msi,exe,dmg
+            --bundles ${{ matrix.bundles }}
